tests/ui/impl-trait/auto-trait-selection-freeze.next.stderr
error[E0284]: type annotations needed: cannot satisfy `impl Sized == _`
  --> $DIR/auto-trait-selection-freeze.rs:19:5
   |
LL |     if false { is_trait(foo()) } else { Default::default() }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot satisfy `impl Sized == _`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
